@@ -113,6 +113,7 @@ def do(dirwin, command, *args):
         args = revert_dialog(dirwin, args[0])
     elif command == 'rename':
         newname = rename_dialog(dirwin, args[0])
+        if not newname: return
         args = [args[0], newname]
     if not args: return
 
@@ -168,7 +169,7 @@ def get_entries(path):
         f = line[0]
         line = line.strip()
         filename = line.split()[-1]
-        if filename in ('.', '..') or os.path.normpath(path) == os.path.normpath(filename):
+        if filename in ('.', '..'):
             continue
         entries[os.path.basename(filename)] = f
     return entries
@@ -185,10 +186,11 @@ def get_path(path=''):
         return dir
     
 def rename_dialog(dirwin, path):
+    dir = os.path.dirname(path)
     dlg = wx.TextEntryDialog(dirwin, tr('New name'),
-        tr('Rename'), path)
+        tr('Rename'), os.path.basename(path))
     if dlg.ShowModal() == wx.ID_OK:
-        newname = dlg.GetValue()
+        newname = os.path.join(dir, dlg.GetValue())
         dlg.Destroy()
         return newname
     
